--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css" />
   <!-- endbuild -->
 
 </head>
@@ -94,18 +95,17 @@
         <p>Feel free to drop me a message if you have any questions. I usually reply within a day.</p>
         <br>
         <br>
-        <form role="form">
+        <form id="mail" role="form">
           <div class="form-group input-group">
             <span class="input-group-addon"><i class="fa fa-user fa-fw"></i></span>
-            <input type="email" class="form-control"  placeholder="Name">
+            <input type="name" name="name" class="form-control"  placeholder="Name" required>
             </div>
-
           <div class="form-group input-group">
             <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-            <input type="name" class="form-control" placeholder="Email address">
+            <input type="email" name="_replyto" class="form-control" placeholder="Email address" required>
           </div>
           <div class="form-group">
-            <textarea class="form-control" rows="5" placeholder="Your message"></textarea>
+            <textarea class="form-control" name="message" rows="5" placeholder="Your message" required></textarea>
           </div>
           <button type="submit" class="btn btn-default">Send message</button>
         </form>
@@ -162,6 +162,7 @@
 <script src="bower_components/jquery.slimscroll/jquery.slimscroll.min.js"></script>
 <script src="bower_components/fullpage.js/jquery.fullPage.js"></script>
 <script src="bower_components/jquery-backstretch/jquery.backstretch.js"></script>
+<script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
