--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html class="no-js">
+<html>
 <head>
   <meta charset="utf-8">
-  <title>JustBS</title>
+  <title>Sarunas Tamasauskas - Web developer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+  <meta name="google-site-verification" content="3Nvw8fij_UF3ycHmSerGQPD0HIjl0C9nCm5JaOm9dOQ" />
 
   <!-- build:css styles/vendor.css -->
   <link rel="stylesheet" href="bower_components/fullpage.js/jquery.fullPage.css" />
@@ -113,18 +114,6 @@
     </div>
   </div>
 
-
-
-<!--  <div class="jumbotron">
-    <h1>'Allo, 'Allo!</h1>
-
-    <p class="lead">Always a pleasure scaffolding your apps.</p>
-
-    <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
-  </div>-->
-
-
-
   <div class="footer container">
     <p>Sarunas Tamasauskas - ♥ Github pages
 
@@ -144,7 +133,7 @@
     </p>
   </div>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -153,7 +142,6 @@
 
   ga('create', 'UA-55904122-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 
 <!-- build:js scripts/vendor.js -->
