--- a/app/CV.html
+++ b/app/CV.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js">
+<html>
 <head>
   <meta charset="utf-8">
   <title>Curriculum vitae - Sarunas Tamasauskas</title>
-  <meta name="description" content="">
+  <meta name="description" content="Curriculum vitae about Web Developer Sarunas Tamasauskas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -112,7 +112,7 @@
   </dd>
 </dl>
 
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- Google Analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -121,7 +121,7 @@
 
   ga('create', 'UA-55904122-1', 'auto');
   ga('send', 'pageview');
-
 </script>
+
 </body>
 </html>
