Add Google analytics

--- a/app/CV.html
+++ b/app/CV.html
@@ -45,7 +45,10 @@
 <body class="container">
 <![endif]-->
 
-<h1><img height="70px" class="img-circle" src="images/1x1as.jpg"> Curriculum vitae <small>Sarunas Tamasauskas</small></h1>
+<h1>
+  <img height="80px" class="img-circle" src="images/1x1.jpg" alt="Profile picture"> Curriculum vitae
+  <small>Sarunas Tamasauskas</small>
+</h1>
 <br>
 
 <dl class="dl-horizontal">
