--- a/app/index.html
+++ b/app/index.html
@@ -108,14 +108,14 @@
           <div class="form-group">
             <textarea class="form-control" name="message" rows="5" placeholder="Your message" required></textarea>
           </div>
-          <button type="submit" class="btn btn-default">Send message</button>
+          <button type="submit" class="btn btn-success">Send message</button>
         </form>
       </div>
     </div>
   </div>
 
   <div class="footer container">
-    <p>Sarunas Tamasauskas - ♥ Github pages
+    <p>Sarunas Tamasauskas ♥ Github pages
 
       <span class="pull-right">
         You can also find me on:
