--- a/app/index.html
+++ b/app/index.html
@@ -18,16 +18,6 @@
   <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css"/>
   <!-- endbuild -->
 
-  <style>
-    /*.navbar a {*/
-     /*color: #ffffff;*/
-    /*}*/
-
-    /*.navbar a:hover {*/
-     /*color: #c6c6c6;*/
-    /*}*/
-  </style>
-
 </head>
 <body>
 <!--[if lt IE 10]>
@@ -47,7 +37,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Sarunas T</a>
+        <a class="navbar-brand" href="#">Sarunas Tamasauskas</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
