Update image and home page

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,13 @@
   <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css"/>
   <!-- endbuild -->
 
+  <style>
+    h1 small {
+      color: #b9b9b9;
+      font-weight: 100;
+    }
+  </style>
+
 </head>
 <body>
 <!--[if lt IE 10]>
@@ -54,15 +61,18 @@
   </nav>
 </div>
 
+
 <div id="fullpage">
 
-  <div class="section first">
+  <div class="section home">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-6">
-          <h1 style="color: white">
+        <div class="col-xs-6 col-xs-offset-6 text-center">
+          <h1 class="hidden-xs">
             <small>I am</small>
+            <br>
             Sarunas Tamasauskass
+            <br>
             <small> a Web developer</small>
           </h1>
         </div>
@@ -73,7 +83,6 @@
   <div class="section" style="background-color: aliceblue">
     <div class="container">
       <div class="col-lg-12">
-
         <h1>About Sarunas Tamasauskas</h1>
         <br>
 
