--- a/app/index.html
+++ b/app/index.html
@@ -18,12 +18,6 @@
   <link rel="stylesheet" href="bower_components/sweetalert/lib/sweet-alert.css"/>
   <!-- endbuild -->
 
-  <style>
-    h1 small {
-      color: #b9b9b9;
-      font-weight: 100;
-    }
-  </style>
 
 </head>
 <body>
@@ -82,9 +76,11 @@
 
   <div class="section" style="background-color: aliceblue">
     <div class="container">
-      <div class="col-lg-12">
+      <div class="col-lg-12 media">
         <h1>About Sarunas Tamasauskas</h1>
         <br>
+
+        <img src="images/about.jpg"  class="img-rounded pull-right" alt="About Sarunas" height="200">
 
         <p>
           To begin with I believe I am a curious guy and appears that the web is one of the things which always
@@ -105,7 +101,7 @@
 
         <p>Currently I am living in UK and work on few projects, also looking actively for new work opportunities.</p>
 
-        <p><em>If you want to know more about me you can go to my dedicated <a href="/CV.html">CV page</a>.</em></p>
+        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="/CV.html">CV page</a>.</strong></em></p>
       </div>
     </div>
   </div>
