--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
           <h1 class="hidden-xs">
             <small>I am</small>
             <br>
-            Sarunas Tamasauskass
+            Sarunas Tamasauskas
             <br>
             <small> a Web developer</small>
           </h1>
@@ -146,7 +146,6 @@
           <i class="fa fa-stack-overflow"></i>
         </a>
       </span>
-
   </p>
 </div>
 
