--- a/app/CV.html
+++ b/app/CV.html
@@ -22,7 +22,7 @@
     }
     dt h2 {
       font-size: 26px;
-      font-weight: 400;
+      font-weight: 500;
       margin: 0;
     }
     h4 {
@@ -63,7 +63,7 @@
     <ul>
       <li><strong>Proficient:</strong> Laravel, Eloquent ORM, Bootstrap, AngularJs</li>
       <li><strong>Can work with:</strong> Yii, Mongoose ODM, Express js, jQuery</li>
-      <li><strong>I also use:</strong> Gulp, Grunt, Bower, Yeoman, Vagrant</li>
+      <li><strong>I also use:</strong> Gulp, Grunt, Bower, Yeoman, Vagrant, PS</li>
     </ul>
 
     <strong>Environments</strong>
@@ -104,13 +104,13 @@
   <dt><h2>Other links</h2></dt>
   <dd>
     <a href="http://uk.linkedin.com/pub/sarunas-tamasauskas/45/3b/359/">
-      <i class="fa fa-linkedin fa-2x"></i>
+      <i class="fa fa-linkedin fa-lg"></i>
     </a>
     <a href="https://github.com/Stamy">
-      <i class="fa fa-github fa-2x"></i>
+      <i class="fa fa-github fa-lg"></i>
     </a>
     <a href="http://stackoverflow.com/users/2224366/tamy">
-      <i class="fa fa-stack-overflow fa-2x"></i>
+      <i class="fa fa-stack-overflow fa-lg"></i>
     </a>
   </dd>
 </dl>
