Update CV styling

--- a/app/index.html
+++ b/app/index.html
@@ -100,7 +100,7 @@
 
         <p>Currently I am living in UK and work on few projects, also looking actively for new work opportunities.</p>
 
-        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="/CV.html">CV page</a>.</strong></em></p>
+        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="/cv.html">CV page</a>.</strong></em></p>
       </div>
     </div>
   </div>
