--- a/app/cv.html
+++ b/app/cv.html
@@ -60,7 +60,6 @@
   <small>Sarunas Tamasauskas</small>
 </h1>
 <br>
-<p class="visible-print-block">asdsdafasdfasd</p>
 
 <dl class="dl-horizontal">
   <dt><h2>Skills</h2></dt>
@@ -114,7 +113,7 @@
 
   <dt><h2>Other links</h2></dt>
   <dd>
-    <ul>
+    <ul class="list-unstyled">
       <li>
         <a href="http://uk.linkedin.com/pub/sarunas-tamasauskas/45/3b/359/">
           <i class="fa fa-linkedin fa-lg"></i> LinkedIn
