--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
 
   <div class="section" style="background-color: aliceblue">
     <div class="container">
-      <div class="col-lg-12 media">
+      <div class="col-lg-12">
         <h1>About Sarunas Tamasauskas</h1>
 
         <img src="images/about.jpg"  class="img-rounded pull-right" alt="About Sarunas" height="200">
