--- a/app/index.html
+++ b/app/index.html
@@ -177,6 +177,10 @@
 <!-- endbower -->
 <!-- endbuild -->
 
+<!-- build:js scripts/plugins.js -->
+<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js"></script>
+<!-- endbuild -->
+
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
 <!-- endbuild -->
