Update about section

--- a/app/index.html
+++ b/app/index.html
@@ -79,28 +79,30 @@
       <div class="col-lg-12">
         <h1>About Sarunas Tamasauskas</h1>
 
-        <img src="images/about.jpg"  class="img-rounded pull-right" alt="About Sarunas" height="200">
+        <img src="images/about.jpg" class="img-rounded pull-right" alt="About Sarunas" height="200">
 
         <p>
           To begin with I believe I am a curious guy and appears that the web is one of the things which always
           fascinated me. From the day I got access to the internet I always questioned myself how does it work. The
           idea that you could connect and reach people through the website and send a message to all of them just used
           to amaze me. Hence I began to build simple websites when I was 15 years old. It instantly caught my interest
-          and I kept on creating and learning something new with each website I built. After school I decided to
-          embrace it and went to the UK to study Web Development & Design. I graduated Loughborough university and
-          have been working for more than over a year at Veneficus as web developer and what is most interesting web
-          development is still fascinating to me the same way as I started learning it when I was a kid.
+          and I kept on creating websites and learning about it. After school I decided to embrace it and went to the UK
+          to study Web Development & Design. I graduated Loughborough university and have been working for more than
+          over a year at Veneficus as web developer and what is most interesting web development is still fascinating to
+          me the same way as I started learning it when I was a kid.
         </p>
 
         <h4>Technologies I am currently interested and learning</h4>
 
-        <p>NodeJs, MongoDB, Javascript, AngularJs</p>
+        <p>NodeJs, MongoDB, Javascript, AngularJs, PHP</p>
 
         <h4>What do I do at the moment ?</h4>
 
-        <p>Currently I am living in UK and work on few projects, also looking actively for new work opportunities.</p>
+        <p>Currently I am living in UK and working on few projects, also looking actively for new work
+          opportunities.</p>
 
-        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="/cv.html">CV page</a>.</strong></em></p>
+        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="/cv">CV page</a>.</strong></em>
+        </p>
       </div>
     </div>
   </div>
