Hide about image on small resolution

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
       <div class="col-lg-12">
         <h1>About Sarunas Tamasauskas</h1>
 
-        <img src="images/about.jpg" class="img-rounded pull-right" alt="About Sarunas" height="200">
+        <img src="images/about.jpg" class="img-rounded pull-right hidden-xs" alt="About Sarunas" height="200">
 
         <p>
           To begin with I believe I am a curious guy and appears that the web is one of the things which always
