--- a/app/cv.html
+++ b/app/cv.html
@@ -66,19 +66,19 @@
   <dd>
     <strong>Programming skills</strong>
     <ul>
-      <li>PHP, MySQL, MongoDB, NodeJs, Javascript, CSS, HTML5</li>
+      <li>PHP, MySQL, MongoDB, NodeJs, Javascript, CSS, HTML5.</li>
     </ul>
 
     <strong>Libraries</strong>
     <ul>
-      <li><strong>Competent: </strong>Laravel, Bootstrap, AngularJs</li>
-      <li><strong>Can work with: </strong>Yii, Mongoose ODM, Express js, jQuery</li>
-      <li><strong>I also use: </strong>Gulp, Grunt, Bower, Yeoman, Vagrant, Less, PS, Git</li>
+      <li><strong>Competent: </strong>Laravel, Bootstrap, AngularJs.</li>
+      <li><strong>Can work with: </strong>Yii, Mongoose ODM, Express js, jQuery.</li>
+      <li><strong>I also use: </strong>Gulp, Grunt, Bower, Yeoman, Vagrant, Less, PS, Git.</li>
     </ul>
 
     <strong>Environments</strong>
     <ul>
-      <li>Linux (Ubuntu, CentOS), Mac, Windows</li>
+      <li>Linux (Ubuntu, CentOS), Mac, Windows.</li>
     </ul>
   </dd>
 
