--- a/app/cv.html
+++ b/app/cv.html
@@ -78,7 +78,7 @@
 
     <strong>Environments</strong>
     <ul>
-      <li>Linux (Ubuntu, CentOS), Mac, Windows.</li>
+      <li>Linux (Ubuntu, CentOS), Mac, Windows. Also familiar with CLI.</li>
     </ul>
   </dd>
 
