--- a/app/cv.html
+++ b/app/cv.html
@@ -9,7 +9,7 @@
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
-  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+  <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css"/>
   <!-- endbuild -->
 
   <style>
@@ -18,28 +18,35 @@
       font-size: 20px;
       text-rendering: optimizeLegibility;
     }
+
     h1 {
       font-weight: 400;
     }
+
     dt h2 {
       font-size: 26px;
       font-weight: 500;
       margin: 0;
     }
+
     h4 {
       font-size: 22px;
       font-weight: 400;
     }
+
     strong {
       font-weight: 400;
     }
+
     small {
       font-weight: 300 !important;
     }
+
     a {
       color: #9e9e9e;
     }
-    a:hover{
+
+    a:hover {
       color: #474747;
     }
   </style>
@@ -53,9 +60,7 @@
 <![endif]-->
 
 <h1>
-  <a href="http://sarunast.com">
-    <img height="80px" class="img-circle" src="images/1x1.jpg" alt="Profile picture">
-  </a>
+  <a href="http://sarunast.com"><img height="80px" class="img-circle" src="images/1x1.jpg" alt="Profile picture"></a>
   Sarunas Tamasauskas
   <small>Curriculum vitae</small>
 </h1>
@@ -82,7 +87,8 @@
     </ul>
   </dd>
 
-  <dt><h2>Experience</h2></dt>
+  <dt>
+  <h2>Experience</h2></dt>
   <dd>
     <p class="margin-only-bottom">
       <em><strong>Veneficus Ltd. (2013 - 2014)</strong></em>
@@ -125,7 +131,9 @@
     <ul class="list-unstyled">
       <li><a href="https://github.com/Stamy/toplist"><em>Game Top-list System (2013)</em></a></li>
       <li><strong>About:</strong> Game servers top list with statistics. I was responsible for backend.</li>
-      <li><strong>Skills used:</strong> Laravel, MySQL, AngularJs, jQuery, Bootstrap, <a href="https://github.com/rocketeers/rocketeer">Rocketeer</a>.</li>
+      <li><strong>Skills used:</strong> Laravel, MySQL, AngularJs, jQuery, Bootstrap,
+        <a href="https://github.com/rocketeers/rocketeer">Rocketeer</a>.
+      </li>
       <li><strong>Learned:</strong> Better OOP, project structuring, deployment techniques.</li>
     </ul>
 
@@ -133,7 +141,9 @@
       <li><a href="https://github.com/Stamy/Project-management"><em>Project Management (2012)</em></a></li>
       <li><strong>About:</strong> Simple Project management application.</li>
       <li><strong>Skills used:</strong> Laravel, MySQL, jQuery, Bootstrap.</li>
-      <li><strong>Learned:</strong> How do frameworks work (MVC, Seeding, Migrations, ORM, active records) including OOP.</li>
+      <li><strong>Learned:</strong> How do frameworks work (MVC, Seeding, Migrations, ORM, active records) including
+        OOP.
+      </li>
     </ul>
   </dd>
 
@@ -145,20 +155,16 @@
     <ul class="list-unstyled">
       <p>
         <a href="http://uk.linkedin.com/pub/sarunas-tamasauskas/45/3b/359/">
-          <i class="fa fa-linkedin fa-lg"></i> LinkedIn
-        </a>,
+          <i class="fa fa-linkedin fa-lg"></i> LinkedIn</a>,
 
         <a href="https://github.com/Stamy">
-          <i class="fa fa-github fa-lg"></i> Github
-        </a>,
+          <i class="fa fa-github fa-lg"></i> Github</a>,
 
         <a href="http://stackoverflow.com/users/2224366/tamy">
-          <i class="fa fa-stack-overflow fa-lg"></i> Stackoverflow
-        </a>,
+          <i class="fa fa-stack-overflow fa-lg"></i> Stackoverflow</a>,
 
         <a href="http://sarunast.com">
-          <i class="fa fa-home fa-lg"></i> Personal Website
-        </a>.
+          <i class="fa fa-home fa-lg"></i> Personal Website</a>.
       </p>
       </li>
     </ul>
@@ -167,10 +173,17 @@
 
 <!-- Google Analytics -->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-55904122-1', 'auto');
   ga('send', 'pageview');
