--- a/app/index.html
+++ b/app/index.html
@@ -135,7 +135,7 @@
 </div>
 
 <div class="footer container">
-  <p>Sarunas Tamasauskas ♥ Github pages
+  <p>Sarunas Tamasauskas ♥ <a href="https://github.com/Stamy/sarunast.com">Github pages</a>
 
       <span class="pull-right">
         You can also find me on:
