--- a/app/cv.html
+++ b/app/cv.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sarunas Tamasauskas - Web Developer - CV</title>
+  <title>Curriculum vitae - Sarunas Tamasauskas Web Developer</title>
   <meta name="description" content="Curriculum vitae about Web Developer Sarunas Tamasauskas">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -89,6 +89,19 @@
 
   <dt>
   <h2>Experience</h2></dt>
+  <dd>
+    <p class="margin-only-bottom">
+      <em><strong>Wikitude GmbH. (2015 Feb - Now)</strong></em>
+      <small class="pull-right"><a href="http://www.wikitude.com/" rel="noreferrer">Wikitude.com</a></small>
+    </p>
+
+    <ul>
+      <li><strong>Skills used:</strong> MongoDB, CSS, HTML, JavaScript, NodeJs, AngularJs, ExpressJs.
+      </li>
+      <li><strong>Role overview:</strong> Web Developer helping to maintain and create new web applications.
+      </li>
+    </ul>
+  </dd>
   <dd>
     <p class="margin-only-bottom">
       <em><strong>Veneficus Ltd. (2013 - 2014)</strong></em>
