--- a/app/index.html
+++ b/app/index.html
@@ -172,10 +172,14 @@
 <!-- build:js scripts/vendor.js -->
 <!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
-<script src="bower_components/jquery.slimscroll/jquery.slimscroll.min.js"></script>
 <script src="bower_components/fullpage.js/jquery.fullPage.js"></script>
+<script src="bower_components/fullpage.js/vendors/jquery.easings.min.js"></script>
+<script src="bower_components/fullpage.js/vendors/jquery.slimscroll.min.js"></script>
 <script src="bower_components/jquery-backstretch/jquery.backstretch.js"></script>
 <script src="bower_components/sweetalert/lib/sweet-alert.js"></script>
+<script src="bower_components/headroom.js/dist/headroom.js"></script>
+<script src="bower_components/headroom.js/dist/jQuery.headroom.js"></script>
+<script src="bower_components/headroom.js/dist/angular.headroom.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
