--- a/app/cv.html
+++ b/app/cv.html
@@ -172,7 +172,7 @@
         <a href="http://uk.linkedin.com/in/sarunast/">
           <i class="fa fa-linkedin fa-lg"></i> Sarunast</a>,
 
-        <a href="https://github.com/Stamy">
+        <a href="https://github.com/sarunast">
           <i class="fa fa-github fa-lg"></i> Stamy</a>.
       </p>
     </ul>
