--- a/app/index.html
+++ b/app/index.html
@@ -138,13 +138,13 @@
 
       <span class="pull-right">
         You can also find me on:
-        <a href="http://uk.linkedin.com/pub/sarunas-tamasauskas/45/3b/359/">
+        <a href="https://at.linkedin.com/in/sarunast">
           <i class="fa fa-linkedin"></i>
         </a>
-        <a href="https://github.com/Stamy">
+        <a href="https://github.com/sarunast">
           <i class="fa fa-github"></i>
         </a>
-        <a href="http://stackoverflow.com/users/2224366/tamy">
+        <a href="http://stackoverflow.com/users/2224366/sarunast">
           <i class="fa fa-stack-overflow"></i>
         </a>
       </span>
