Remove headroom and update font-awesome

--- a/app/cv.html
+++ b/app/cv.html
@@ -165,15 +165,15 @@
     <ul class="list-unstyled">
       <p>
         <a href="mailto:sarunas@sarunast.com">
-          <i class="fa fa-envelope fa-lg"></i> sarunas@sarunast.com</a>,
+          <i class="fa fa-envelope"></i> sarunas@sarunast.com</a>,
         <a href="http://sarunast.com">
-          <i class="fa fa-globe fa-lg"></i> sarunast.com</a>,
+          <i class="fa fa-globe"></i> sarunast.com</a>,
 
         <a href="http://uk.linkedin.com/in/sarunast/">
-          <i class="fa fa-linkedin fa-lg"></i> Sarunast</a>,
+          <i class="fa fa-linkedin"></i> Sarunast</a>,
 
         <a href="https://github.com/sarunast">
-          <i class="fa fa-github fa-lg"></i> Stamy</a>.
+          <i class="fa fa-github"></i> Stamy</a>.
       </p>
     </ul>
   </dd>
