--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <p>Currently I am living in Austria, Salzburg and working in <a href="http://www.wikitude.com/" rel="noreferrer" >Wikitude</a>.</p>
 
-        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="/cv">CV page</a>.</strong></em>
+        <p><em>If you want to know more about me you can go to my dedicated <strong> <a href="cv">CV page</a>.</strong></em>
         </p>
       </div>
     </div>
